# forgeindex

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
Formula/: forgeindex.rb
docs/: MCP_TOOLS.md  UPDATING.md
src/: cli.rs  compressor.rs  config.rs  graph.rs  indexer.rs  lib.rs  main.rs  mcp.rs  parser.rs  store.rs  watcher.rs
tests/: integration_test.rs
tests/fixtures/python_project/: main.py  models.py  utils.py
tests/fixtures/typescript_project/: index.ts  types.ts  utils.ts
